<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_COM_SpeedControl_FTL" Id="{e135f77e-b247-4e73-8041-d94a1c42c078}">
    <Declaration><![CDATA[TYPE ST_COM_SpeedControl_FTL :
STRUCT
	//Speedcontrol - FTL
	FTL_SpeedControl		AT %I* :ST_COM_FTL_SpdCntrl;
	SpeedControl_FTL		AT %Q* :ST_COM_SpdCntrl_FTL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>