<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_COM_SpeedControl_IMD" Id="{b211a788-66f5-405d-b920-8f109c8e3c09}">
    <Declaration><![CDATA[TYPE ST_COM_SpeedControl_IMD :
STRUCT
	//Speedcontrol - IMD
	IMD_SpeedControl		AT %I* :ST_COM_IMD_SpdCntrl;
	SpeedControl_IMD		AT %Q* :ST_COM_SpdCntrl_IMD;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>