<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_MachPar" Id="{d85976ca-04cb-4db5-afc4-5c2fb46a7db4}">
    <Declaration><![CDATA[TYPE ST_MachPar :
STRUCT
	Conveyor				: ST_ConveyorMachPar;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>