<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_PowerMeasurement" Id="{c25447c4-0868-4284-912d-d169fa061090}">
    <Declaration><![CDATA[TYPE ST_PowerMeasurement :
STRUCT
	ixPDOToggle		:BOOL;
	iwCurrent 		:DINT;
	iwVoltage		:DINT;
	iwActivePower	:DINT;
	iwIndex			:USINT;
	iwVariantValue	:DINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>