<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ProdPar" Id="{8b7fc2c7-5a70-4665-bfd2-f001d0b91a3a}">
    <Declaration><![CDATA[TYPE ST_ProdPar :
STRUCT
	Conveyor			: ST_ConveyorProdPar;
	Product				: ST_ProductPar;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>