<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_SysPar" Id="{0b1928be-21a0-4771-a08f-eeeab5c843b9}">
    <Declaration><![CDATA[TYPE ST_SysPar :
STRUCT
	Conveyor					: ST_ConveyorSysPar;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>