<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL" Id="{a030a360-f43d-49e5-918f-501fc58fede1}">
    <Declaration><![CDATA[
VAR_GLOBAL PERSISTENT
	PersMachPar					: ST_MachPar;
	PersSysPar					: ST_SysPar;
END_VAR
VAR_GLOBAL CONSTANT
	MAX_ZONES					: INT:= 7;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>