<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ConveyorProdPar" Id="{f937fbb2-95cc-4112-8298-56ba50b06764}">
    <Declaration><![CDATA[TYPE ST_ConveyorProdPar :
STRUCT
	BlowOff_Prod			: ST_BlowOffProdPar;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>